--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-02-12  Tomas Kalibera  <tomas.kalibera@gmail.com>
+
+	* inst/include/unsupported/Eigen/CXX11/src/ThreadPool/ThreadYield.h:
+	Support clang on Windows by including 'sched.h' header
+
 2024-01-17  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* DESCRIPTION (Version, Date): Release candidate 0.3.3.99.0
