--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-02-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.3.4.0.0
+
 2024-02-12  Tomas Kalibera  <tomas.kalibera@gmail.com>
 
 	* inst/include/unsupported/Eigen/CXX11/src/ThreadPool/ThreadYield.h:
