--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2025-12-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Roll micro release and date
+
 2025-12-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* configure.ac: Detect OpenMP compile and link options
